--- a/src/dev/styles/priv.scss
+++ b/src/dev/styles/priv.scss
@@ -1,3 +1,11 @@
 .navbar-brand{
   padding-top: 0;
 }
+.section{
+  margin-top: -14px;
+
+  h1{
+    @extend .text-center;
+    padding-top: 40vh;
+  }
+}
